hphp/hack/test/typecheck/namespace/use_conflict_enum.php.rust_elab.exp
File "use_conflict_enum.php", line 5, characters 6-8:
Cannot declare `Foo` because the name was explicitly used earlier via a `use` statement on line 3 (Parsing[1002])
File "use_conflict_enum.php", line 5, characters 6-8:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
