hphp/hack/test/typecheck/namespace/use_conflict_enum.php
<?hh

use UseNS\Foo;

enum Foo: int {}
